@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14062: Header objects now correctly respect the 'linesep' setting
+  when processed by BytesParser (which smtplib.SMTP.send_message uses).
+
 - Issue #14291: Email now defaults to utf-8 for non-ASCII unicode headers
   instead of raising an error.  This fixes a regression relative to 2.7.
 
